# AGI

./: .gitignore  PLAN_UNLIMITED_MEMORY.md  REVIEW.md  REVIEW_DETAILED.md  wishes.txt
python/: bridge.py  config.py  main.py  requirements.txt
python/_fallback/: __init__.py  context_compressor.py  embedding_cache.py  emotion_analyzer.py  memory_engine.py  thread_tracker.py  tool_parser.py
python/core/: __init__.py  active_learning.py  agent.py  bpe_tokenizer.py  chain_of_thought.py  code_understanding.py  conditional_gen.py  context_compressor.py  cross_attention.py  dialogue_engine.py  dialogue_memory.py  emotions.py  emotions_vad.py  identity.py  intent_router.py  knowledge_distillation.py  learned_patterns.py  memory.py  meta_learning.py  metacognition.py  micro_transformer.py  mixture_of_experts.py  neural_engine.py  orchestrator.py  response_generator.py  self_awareness.py  self_play.py  sentence_embeddings.py  task_planner.py  vram_manager.py
python/core/agents/: __init__.py  analyst.py  base_agent.py  director.py  executor.py  reasoner.py
python/core/brain/: __init__.py
python/core/identity_data/: __init__.py  kristina_beliefs.yaml  kristina_core.yaml  kristina_evolution.json  kristina_memories.json
python/data/: app_cache.json  embedding_cache.json  metacognition.json
python/data/memory/: episodic.json
python/data/vector_db/: chroma.sqlite3
python/modules/: __init__.py
python/modules/memory/: __init__.py  knowledge_graph.py  summarizer.py  thread_tracker.py
python/modules/rag/: __init__.py  vector_store.py
python/modules/system_control/: __init__.py  app_finder.py  controller.py
python/scripts/: generate_innate_memories.py
python/tools/: __init__.py  base.py  file_tools.py  memory_tools.py  system_tools.py  web_tools.py
python/utils/: logging.py  parsers.py  validators.py
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: context_compressor.rs  embedding_cache.rs  emotion_analyzer.rs  lib.rs  memory_engine.rs  similarity.rs  thread_tracker.rs  tool_parser.rs
