[package]
name = "kristina_core"
version = "6.0.0"
edition = "2021"
description = "Высокопроизводительное ядро Кристины 6.0"

[lib]
name = "kristina_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# bincode удалён — JSON достаточен для персистентности

# Конкурентность
dashmap = "6.0"
parking_lot = "0.12"
# crossbeam-channel — УДАЛЁН (не используется)

# Текст и паттерны
aho-corasick = "1.1"
# regex и unicode-segmentation удалены — Aho-Corasick покрывает все нужды

# Хэширование / ID
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# uuid удалён — не используется в текущем API

# Время
chrono = { version = "0.4", features = ["serde"] }

# Параллелизм для batch operations
rayon = "1.10"

# Неиспользуемые зависимости удалены:
# tracing/tracing-subscriber — логирование идёт через Python logging
# bincode — не требуется (JSON достаточен)
# regex — заменён на Aho-Corasick
# unicode-segmentation — не требуется
# uuid — не требуется в текущем API

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
