[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kristina_core"
version = "5.0.0"
description = "Высокопроизводительное Rust-ядро для Кристины 5.0"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "kristina_core"
